--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,55 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  padding: 60px;
+  background-color: rgb(27, 31, 31);
+  color: white;
+}
+
+input{
+  width: 100%;
+  font-size: 1.2rem;
+  color: gray;
+}
+
+.card-grid{
+  display:flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.card {
+  align-content: center;
+  border: 1px solid gray;
+  border-radius: 6px;
+  overflow: hidden;
+  margin-bottom: 10px;
+  margin-right: 10px;
+
+  display: inline-block;
+  margin: 0 0.5rem;
+
+  animation: zoomInUp; /* referring directly to the animation's @keyframe declaration */
+  animation-duration: 1s; /* don't forget to set a duration! */
+}
+
+.card p{
+  padding: 5px;
+  text-align: center;
+}
+
+.card img{
+  max-height: 170px;
+}
+
+.cat-title{
+  animation: fadeInLeft;
+  animation-duration: 1s;
+}
+
+.load-text{
+  animation: flash;
+  animation-duration: 3s;
 }
